--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
 <head lang="en-US">
 
 
-	<title>Login</title>
+	<title>Landing</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="styles.css">
 
@@ -57,7 +57,7 @@
       <hr style="width: 50%">
         
 
-      <div id="bodydiv" style="background: #FFEBEE; width: 35%; height: 100px; align-self: center; opacity: 0.9; float: left; margin-left: 360px;">
+      <div id="bodydiv" style="background: #FFEBEE; width: 35%; height: 100px; align-self: center; opacity: 0.7; float: left; margin-left: 360px;">
 
        
         <p>  What ever I write here is not exactly personal story. Moving on lets see what the future holds for me :D</p>
