--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
               <th>
                 <form onsubmit="return confirm('Hint: \t UserName= maha \n \t \t Password= 123');">
           
-                  <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect" style="margin-top: 13px">
+                  <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
                     <!-- Help Icon -->
                     <i class="material-icons">&#xE8FD;</i> 
                   </button> 
